Almost ready for a release

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -35,6 +35,7 @@
 <link rel="import" href="duplication-cfg.html">
 <link rel="import" href="loss-cfg.html">
 <link rel="import" href="dev-cfg.html">
+<link rel="import" href="device-cfg.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
