--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             // For testing look for "?classic" or "?modern" in the URL to override
             // device detection default.
             //
-            if (s.match(/\bclassic\b/)) {
-                profile = 'classic';
-            }
-            else if (s.match(/\bmodern\b/)) {
-                profile = 'modern';
-            }
-            else {
-                profile = tags.desktop ? 'classic' : 'modern';
-                //profile = tags.phone ? 'modern' : 'classic';
-            }
+            //if (s.match(/\bclassic\b/)) {
+            //    profile = 'classic';
+            //}
+            //else if (s.match(/\bmodern\b/)) {
+            //    profile = 'modern';
+            //}
+            //else {
+            //    profile = tags.desktop ? 'classic' : 'modern';
+            //    //profile = tags.phone ? 'modern' : 'classic';
+            //}
 
-            Ext.manifest = profile; // this name must match a build profile name
+            Ext.manifest = 'classic'; // this name must match a build profile name
 
             // This function is called once the manifest is available but before
             // any data is pulled from it.
