Allow custom labels for inbound/outbound

--- a/app/elements/device-cfg.html
+++ b/app/elements/device-cfg.html
@@ -56,7 +56,7 @@ Polymer({
       dataType: 'json',
       method: 'GET',
       success: function(data) {
-        me.set('allDevices', data);
+        me.set('allDevices', data.allow_no_ip);
       },
       error: function(msg) {
         app.showToast(msg.responseText);
